--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <main>
 
-  <app-post-create (postCreated) ="onPostAdded($event)"></app-post-create>
+  <app-post-create></app-post-create>
 
-  <app-post-list [posts]="storedPost"></app-post-list>
+  <app-post-list></app-post-list>
 
 </main>
