--- a/src/app/posts/create-post.component.ts/create-post.component.html
+++ b/src/app/posts/create-post.component.ts/create-post.component.html
@@ -1,11 +1,27 @@
 <mat-card>
+    <form (submit) ="onAddPost(postForm)" #postForm="ngForm">
+        <mat-form-field>
+            <input matInput
+             name="title" 
+             ngModel 
+             required
+              placeholder="Enter Post Title" 
+              #title="ngModel">
+            <mat-error *ngIf="title.invalid">please Enter title</mat-error>
+            </mat-form-field>
+            
     <mat-form-field>
-        <input matInput [(ngModel)]="enteredTitle">
-        </mat-form-field>
+    <textarea  matInput
+     rows ="4" ngModel
+      name="content" 
+      required 
+      placeholder="Enter Post Content"
+       #content="ngModel" ></textarea>
+    <mat-error *ngIf="content.invalid">please Enter content</mat-error>
+    </mat-form-field>
+    
+    <button mat-raised-button color="primary" type="submit">Save</button>
         
-<mat-form-field>
-<textarea  matInput rows ="4" [(ngModel)]="enteredContent" ></textarea>
-</mat-form-field>
-
-<button mat-raised-button color="primary" (click)="onAddPost()">Save</button>
+    </form>
+    
 </mat-card>
