--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -5,9 +5,11 @@
           {{post.title}}
         </mat-panel-title>
     </mat-expansion-panel-header>
-        <mat-panel-description>
-          <p>{{post.content}}</p>
-        </mat-panel-description>
+          <p>{{post.content}}</p> 
+        <mat-action-row>
+          <button mat-button color="primary">EDIT</button>
+          <button mat-button color="warn">DELETE</button>
+        </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf="posts.length <=0">No Post Added...</p>
